--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-02-16 17:06-0500\n"
+"POT-Creation-Date: 2026-02-16 17:23-0500\n"
 "PO-Revision-Date: 2026-01-03 08:56+0100\n"
 "Last-Translator: Christian Lauinger <christian@lauinger-clan.de>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/protonplus/"
@@ -1029,12 +1029,8 @@ msgstr "%s ist schon auf dem neuesten Stand."
 
 #: src/cli/cli.vala:369
 #, fuzzy, c-format
-msgid "Updating %s...\r"
+msgid "Updating %s..."
 msgstr "Aktualisiere %s"
-
-#: src/cli/cli.vala:374
-msgid "\r[2K\r"
-msgstr ""
 
 #: src/cli/cli.vala:381
 #, fuzzy
