--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-02-16 17:06-0500\n"
+"POT-Creation-Date: 2026-02-16 17:23-0500\n"
 "PO-Revision-Date: 2026-02-02 22:20+0800\n"
 "Last-Translator: nick.exe <nick.exe@gmail.com>\n"
 "Language-Team: CodeBay.IN\n"
@@ -974,12 +974,8 @@ msgstr "%s 已為最新版本。"
 
 #: src/cli/cli.vala:369
 #, fuzzy, c-format
-msgid "Updating %s...\r"
+msgid "Updating %s..."
 msgstr "正在更新 %s"
-
-#: src/cli/cli.vala:374
-msgid "\r[2K\r"
-msgstr ""
 
 #: src/cli/cli.vala:381
 #, fuzzy
