--- a/po/com.vysp3r.ProtonPlus.pot
+++ b/po/com.vysp3r.ProtonPlus.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-02-16 17:06-0500\n"
+"POT-Creation-Date: 2026-02-16 17:23-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -956,11 +956,7 @@ msgstr ""
 
 #: src/cli/cli.vala:369
 #, c-format
-msgid "Updating %s...\r"
-msgstr ""
-
-#: src/cli/cli.vala:374
-msgid "\r[2K\r"
+msgid "Updating %s..."
 msgstr ""
 
 #: src/cli/cli.vala:381
