--- a/po/ar.po
+++ b/po/ar.po
@@ -515,7 +515,7 @@ msgid "If you think this is an issue, make sure to report this on GitHub."
 msgstr ".GitHub إذا كنت تعتقد أن هذه مشكلة ، فتأكد من الإبلاغ عن ذلك على"
 
 #: src/widgets/games/games-box.vala:223
-msgid "Unsuported launcher"
+msgid "Unsupported launcher"
 msgstr "مشغل برامج غير مدعوم"
 
 #: src/widgets/games/games-box.vala:223
