--- a/po/fi.po
+++ b/po/fi.po
@@ -524,7 +524,7 @@ msgid "If you think this is an issue, make sure to report this on GitHub."
 msgstr "Mikäli tämä on mielestäsi ongelma, raportoithan siitä GitHub:iin."
 
 #: src/widgets/games/games-box.vala:223
-msgid "Unsuported launcher"
+msgid "Unsupported launcher"
 msgstr "Tämä käynnistin ei ole tuettu"
 
 #: src/widgets/games/games-box.vala:223
