--- a/po/ja.po
+++ b/po/ja.po
@@ -519,7 +519,7 @@ msgid "If you think this is an issue, make sure to report this on GitHub."
 msgstr "もしこれが不具合であると考える場合、GitHub で報告してください。"
 
 #: src/widgets/games/games-box.vala:223
-msgid "Unsuported launcher"
+msgid "Unsupported launcher"
 msgstr "サポートされていないランチャー"
 
 #: src/widgets/games/games-box.vala:223
