--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -522,7 +522,7 @@ msgid "If you think this is an issue, make sure to report this on GitHub."
 msgstr "Ako mislite da je ovo problem, obavezno ga prijavite na GitHub-u."
 
 #: src/widgets/games/games-box.vala:223
-msgid "Unsuported launcher"
+msgid "Unsupported launcher"
 msgstr "Nepodržani lanser"
 
 #: src/widgets/games/games-box.vala:223
