--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -509,7 +509,7 @@ msgid "If you think this is an issue, make sure to report this on GitHub."
 msgstr "若您认为这是个问题，请务必在 GitHub 上回报。"
 
 #: src/widgets/games/games-box.vala:223
-msgid "Unsuported launcher"
+msgid "Unsupported launcher"
 msgstr "未支援的启动器"
 
 #: src/widgets/games/games-box.vala:223
