--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -509,7 +509,7 @@ msgid "If you think this is an issue, make sure to report this on GitHub."
 msgstr "若您認為這是個問題，請務必在 GitHub 上回報。"
 
 #: src/widgets/games/games-box.vala:223
-msgid "Unsuported launcher"
+msgid "Unsupported launcher"
 msgstr "未支援的啟動器"
 
 #: src/widgets/games/games-box.vala:223
