--- a/po/hr.po
+++ b/po/hr.po
@@ -522,7 +522,7 @@ msgid "If you think this is an issue, make sure to report this on GitHub."
 msgstr "Ako mislite da je ovo problem, obavezno prijavite to na GitHub-u."
 
 #: src/widgets/games/games-box.vala:223
-msgid "Unsuported launcher"
+msgid "Unsupported launcher"
 msgstr "Nepodržani pokretač"
 
 #: src/widgets/games/games-box.vala:223
