--- a/po/it.po
+++ b/po/it.po
@@ -522,7 +522,7 @@ msgid "If you think this is an issue, make sure to report this on GitHub."
 msgstr "Se credi sia un errore, puoi segnalarlo su GitHub."
 
 #: src/widgets/games/games-box.vala:223
-msgid "Unsuported launcher"
+msgid "Unsupported launcher"
 msgstr "Launcher non supportato"
 
 #: src/widgets/games/games-box.vala:223
