--- a/po/vi.po
+++ b/po/vi.po
@@ -506,7 +506,7 @@ msgid "If you think this is an issue, make sure to report this on GitHub."
 msgstr ""
 
 #: src/widgets/games/games-box.vala:223
-msgid "Unsuported launcher"
+msgid "Unsupported launcher"
 msgstr ""
 
 #: src/widgets/games/games-box.vala:223
